Fix errors identified in check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,9 @@ export(no.overlap)
 export(overdisperse)
 export(random.landscape)
 export(sim.autocorr)
+import(spatstat)
+importFrom(stats,dist)
+importFrom(stats,fft)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
